resolved fixed nav issues on mobile

--- a/src/components/HomePage/Header/header.module.css
+++ b/src/components/HomePage/Header/header.module.css
@@ -43,13 +43,13 @@ a {
 }
 @media only screen and (max-width: 860px) {
   .p {
-    font-size: 110%;
+    font-size: 90%;
     padding-top: 30%;
   }
 }
 @media only screen and (max-width: 1000px) {
   .p {
-    font-size: 150%;
+    font-size: 130%;
     padding-top: 20%;
   }
 }
